<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/beer_list2">

    <fragment
        android:id="@+id/beer_list2"
        android:name="com.example.beerapp.presenters.fragments.BeerListFragment"
        tools:layout="@layout/beer_list"
        android:label="@string/home">
    </fragment>

    <fragment
        android:id="@+id/favorite_beers"
        android:name="com.example.beerapp.presenters.fragments.FavoriteBeersFragment"
        tools:layout="@layout/favorite_beers_screen"
        android:label="@string/favorites">
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.beerapp.presenters.fragments.SettingsFragment"
        tools:layout="@layout/settings_screen"
        android:label="@string/profile"/>
</navigation>