<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingsViewModel"
            type="com.example.domain.controllers.view_models.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bgColor">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/user_image_size"
            android:layout_height="@dimen/user_image_size"
            android:layout_marginStart="@dimen/settings_horizontal_margin"
            android:layout_marginTop="@dimen/settings_sections_vertical_margin"
            android:contentDescription="@string/user_image"
            app:layout_constraintBottom_toTopOf="@id/notifications_section"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/user_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_horizontal_margin"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:layout_marginEnd="@dimen/settings_horizontal_margin"
            android:textColor="?attr/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/user_email"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_image" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/user_email_text_size"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintLeft_toLeftOf="@id/user_name"
            app:layout_constraintRight_toRightOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notifications_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_sections_height"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/random_beer_selection_section"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image">

            <TextView
                android:id="@+id/notifications_text"
                style="@style/section_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/switch_margin_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/secondaryLightColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/random_beer_selection_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_sections_height"
            android:layout_marginTop="@dimen/settings_sections_vertical_margin"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/theme_section"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifications_section">

            <TextView
                android:id="@+id/random_beer_selection_text"
                style="@style/section_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_random_beer_from_favorites"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/random_beer_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/switch_margin_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/secondaryLightColor"
                app:track="?attr/switchBgColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/theme_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_sections_height"
            android:layout_marginTop="@dimen/settings_sections_vertical_margin"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/logout_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/random_beer_selection_section">

            <TextView
                android:id="@+id/theme_text"
                style="@style/section_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/switch_margin_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/secondaryLightColor"
                app:track="?attr/switchBgColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:background="@color/secondaryLightColor"
            android:text="@string/logout"
            android:textColor="?attr/sectionTextColor"
            app:layout_constraintBottom_toTopOf="@id/copyright"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme_section" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:gravity="center"
            android:text="@string/imperia_online_2020"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/copyright_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
